Squashed commit of the following:
commit 71537103a1ab9f3077e9c5289fc68110135dd9cf
Author: Devin Spikowski <vegeta897@gmail.com>
Date:   Sat Mar 4 16:21:28 2023 -0500

    🚸 Make puppeteer deps optional

commit 0cad690f6166062d611e86ba421d03e8cc1d3886
Author: Devin Spikowski <vegeta897@gmail.com>
Date:   Fri Feb 10 07:26:46 2023 -0500

    ✨ Add Twitter scraper module as alternative (#1)

    * ⚗️ Testing out puppeteer

    * 🚧 We scrapin

    * ✨ Implement retweets option

    * ✨ Reached feature parity

    * ✨ Allow deactivating twitter module entirely

    * 🥅 Handle errors and knowing when to quit

    * 🥅 Handle twitter stream connection rate limiting

    * 🔥 Remove accidental import

commit e24f89d5f5720d45d4651630936faf110d21590b
Author: Devin Spikowski <vegeta897@gmail.com>
Date:   Thu Feb 2 05:04:22 2023 -0500

    🔒️ Fix dependency vulnerability

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ TWITCH_CLIENT_ID=""
 TWITCH_CLIENT_SECRET=""
 TWITCH_BANNER_URL=""
 TWITTER_USERNAME=""
+TWITTER_SCRAPE_MODE="true"
 TWITTER_TOKEN=""
 TWITTER_INCLUDE_RETWEETS="false"
 TWITTER_INCLUDE_REPLIES="false"
