✨ Add Twitch chat bot (#2)
* 🚧 A twitch chat bot?!

* 🚧 Auth stuff

* 🚧 Update Twurple, add oauth, redo twitch init

* 🛂 Check scopes for eventsub init

* 🙈 Update .gitignore

* ✨ Add ejs templates

* ✨ Store express sessions in db (wip)

* ✨ Add session expiration to store

* 🛂 Add a bunch of auth-related improvements

* 🚸 Improve error page, delete session on de-auth

* 🛂 Improve auth revoke handling, based on method

* ✨ Add placeholder admin panel

* ♻️ Refactor twitch auth code by account type

* ✨ Add account info to admin page, ejs formatting

* 🐛 Catch error when invalid token revoked

* ♻️ Simplify oauth account type code, rename env vars

* ✨ Use express server for eventsub

* 🐛 Fix chat client init without bot token

* 🐛 Remove protocol from hostname

* 🐛 Fix ejs views path

* 🐛 Fix OAuth callback url

* 🐛 Fix cookie settings

* 🐛 Fix cookies for real, hopefully

* 🐛 Try fixing cookie again

* 📝 Add x-forwarded-proto line to nginx config

* ♻️ Extract express module, make twitch src folder

* ✨ Add grace train tracker

* ✨ Detect when bot is gifted a sub

* 🚸 Check if bot is following streamer

* 🛂 Add user follows scope

* 🛂 Add state to oauth request

* 🛂 Fix token validation and refactor a bit

* ✨ Add recap command, emotes module

* ✨ Add tally command

* 🐛 Fix repeated character regex

* 🧑‍💻 Add chat test mode, tally command cooldown

* ✨ Add command test buttons to admin page

* ♻️ Extract stream/vod handling to separate file

* ✨ Persist emote/redeem counts in db

* 🧑‍💻 Add test grace event button to admin page

* 🛂 Move moderator scopes to bot

* 🚸 Add whispers scope, reply to whispers

* 🚸 Improve number detection in tallies

* 🔥 Clean up comment

* Squashed commit of the following:

commit 71537103a1ab9f3077e9c5289fc68110135dd9cf
Author: Devin Spikowski <vegeta897@gmail.com>
Date:   Sat Mar 4 16:21:28 2023 -0500

    🚸 Make puppeteer deps optional

co

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,8 @@
-TWITCH_USERNAME=""
+TWITCH_STREAMER_USERNAME=""
+TWITCH_BOT_USERNAME=""
+TWITCH_ADMIN_USERNAME=""
 TWITCH_CLIENT_ID=""
 TWITCH_CLIENT_SECRET=""
-TWITCH_EVENTSUB_HOSTNAME=""
-TWITCH_EVENTSUB_PATH_PREFIX=""
-TWITCH_EVENTSUB_PORT="3000"
 TWITCH_BANNER_URL=""
 TWITTER_USERNAME=""
 TWITTER_SCRAPE_MODE="true"
@@ -15,3 +14,5 @@ DISCORD_SERVER_ID=""
 DISCORD_TWITCH_CHANNEL_ID=""
 DISCORD_TWITTER_CHANNEL_ID=""
 NICKNAME=""
+EXPRESS_HOSTNAME="spicebot.example.com"
+EXPRESS_PORT="3000"
